--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
+    "react-phone-input-2": "^2.15.1",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "uuid": "^11.1.0"
